fix: fixing visible item
Исправлено отображение товаров

--- a/src/sass/layout/_details.scss
+++ b/src/sass/layout/_details.scss
@@ -29,6 +29,13 @@
 	max-width: 647px;
 }
 
+.details__cart-button {
+	margin-top: 20px;
+	width: 100%;
+	max-width: 300px;
+	align-self: center;
+}
+
 .details__pages-back {
 	position: absolute;
 	width: 40px;
